# picotado

./: .gitignore  CMakeLists.txt  CMakePresets.json  PORTING.md  Picotado.jucer  README.md
cmake/: FindZLIB.cmake
plugin/: CMakeLists.txt
plugin/include/Picotado/: BinauralRenderer.h  Grain.h  GranularEngine.h  ParameterIDs.h  PluginEditor.h  PluginProcessor.h
plugin/source/: BinauralRenderer.cpp  GranularEngine.cpp  PluginEditor.cpp  PluginProcessor.cpp
plugin/ui/public/: index.html  style.css  test.html
plugin/ui/public/js/: index.js  knob.js  test-entry.js
scripts/: DownloadWebView2.ps1  build.cmd  clean.cmd  debug.cmd  download-sofa.cmd  install-vst3.cmd  release.cmd  run.cmd  setup.cmd
